feat: Add comprehensive testing workflow and CI/CD pipeline
- Added Jest-based backend API tests for all endpoints
- Added Vitest-based frontend component tests
- Created comprehensive integration test workflow
- Added GitHub Actions CI/CD pipeline with multi-stage testing
- Added detailed testing documentation (TESTING.md)
- Configured test databases and environments
- Added test coverage reporting
- Implemented security auditing and code quality checks
- Added automated deployment workflows for staging/production

Testing Features:
✅ Backend API tests (Members, Blood Pressure, Encounters)
✅ Frontend component tests (Dashboard, Members)
✅ Integration tests with real database
✅ End-to-end browser testing
✅ Automated CI/CD pipeline
✅ Test coverage reporting
✅ Security vulnerability scanning
✅ Code quality checks with ESLint
✅ Comprehensive test documentation

--- a/package.json
+++ b/package.json
@@ -11,13 +11,28 @@
     "build": "cd client && npm run build",
     "start": "cd server && npm start",
     "db:push": "cd server && npm run db:push",
-    "db:studio": "cd server && npm run db:studio"
+    "db:studio": "cd server && npm run db:studio",
+    "test": "node test-workflow.js",
+    "test:backend": "cd server && npm test",
+    "test:frontend": "cd client && pnpm test",
+    "test:integration": "node test-workflow.js",
+    "test:coverage": "npm run test:backend:coverage && npm run test:frontend:coverage",
+    "test:backend:coverage": "cd server && npm run test:coverage",
+    "test:frontend:coverage": "cd client && pnpm run test:coverage",
+    "lint": "npm run lint:client",
+    "lint:client": "cd client && pnpm run lint"
   },
-  "keywords": ["hypertension", "healthcare", "first-responders"],
+  "keywords": [
+    "hypertension",
+    "healthcare",
+    "first-responders"
+  ],
   "author": "jeffbander",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.2.0"
   }
 }
-
