--- a/server/package.json
+++ b/server/package.json
@@ -10,30 +10,38 @@
     "start": "node dist/index.js",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "drizzle-kit generate",
+    "test": "NODE_OPTIONS='--loader=ts-node/esm' jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "express-session": "^1.17.3",
-    "drizzle-orm": "^0.29.0",
     "postgres": "^3.4.3",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "dotenv": "^16.3.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/uuid": "^9.0.7",
+    "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.7",
+    "better-sqlite3": "^12.2.0",
+    "drizzle-kit": "^0.20.0",
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.6.0",
-    "drizzle-kit": "^0.20.0"
+    "typescript": "^5.3.0"
   }
 }
-
